# ai-computer-control-form-fill

./: .env.example  .gitignore  README.md  config.yml  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
bruno/Computer Control/: Chat.yml  opencollection.yml
docker/: docker-compose-postgres.yml
docker/postgres/: Dockerfile
src/: agent.py  instructions.txt  main.py  postgres_session.py  util.py
src/config/: base_config.py  config.py
test/: test_main.py  test_util.py
